<resources xmlns:https="http://schemas.android.com/tools">
    <string name="app_name">RajMantri</string>
    <string name="tagline">Your own adviser</string>
    <string name="login">Login</string>
    <string name="newhere">New Here?</string>
    <string name="loginid">SSOID/Username</string>
    <string name="pass">Password</string>
    <string name="eng" translatable="false">English</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="title_activity_content_page">ContentPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="chatbot">ChatBot</string>
    <string name="market">e-Market</string>
    <string name="setting">Settings</string>
    <string name="eAI">Energy-AI</string>

    <string name="close_activity">Exiting App</string>
    <string name="confirm_close">Are you sure you want to close this app?</string>
    <string name="ask_yes">Yes</string>
    <string name="ask_no">No</string>

    <string name="more">More</string>
    
    <string name="exp1">Our ChatBot is specially trained to resolve all your problems you could face during the lodging of a complaint.</string>
    <string name="exp2">The Energy module uses machine learning for the most accurate prediction of energy consumption which can be scaled up for various uses.</string>
    <string name="exp3">The e-Market provides the user real time prices of fruits and vegetables and can even given prediction of prices.</string>

    <string name="action_settings">Settings</string>
    <string name="select">Select</string>

    <string-array name="spinner_array">
        <item>Ajmer</item>
        <item>Bikaner</item>
        <item>Chittorgarh</item>
        <item>Jaipur</item>
        <item>Kota</item>
        <item>Udaipur</item>
    </string-array>

    <string-array name="eai_options">
        <item>Manual Entry</item>
        <item>Fetch from E-Mitra</item>
    </string-array>

    <string-array name="spinner_array1">
        <item>Vegetables</item>
        <item>Fruits</item>
    </string-array>

    <string name="Fetching_data">Fetching Data</string>
    <string name="dia_wait">Please Wait</string>
    <string name="temperature">Temperature</string>
    <string name="last_month_units">Last Month Units</string>
    <string name="last_2_months_units">Last 2 Months Units</string>
    <string name="last_3_months_units">Last 3 Months Units</string>
    <string name="show">Show</string>
    <string name="energy_val">\Next Month\'s Consumption</string>


</resources>
