<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/chatbot"
            android:icon="@drawable/ic_forum_black_24px"
            android:title="@string/chatbot" />
        <item
            android:id="@+id/e_pay"
            android:icon="@drawable/ic_trending_up_black_24px"
            android:title="@string/eAI" />
        <item
            android:id="@+id/market"
            android:icon="@drawable/ic_credit_card_black_24px"
            android:title="@string/market" />


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/setting" />
        </menu>
    </item>

    </group>

</menu>
